Fix Page Header spacing issue
- Remove inline styles

--- a/assets/src/styles/blocks/PageHeader.scss
+++ b/assets/src/styles/blocks/PageHeader.scss
@@ -4,6 +4,17 @@ $text-column-width-xl: 380px;
 $text-column-width-xxl: 440px;
 $text-column-padding-in: 24px;
 
+.wp-block-group.is-pattern-p4-page-header {
+  .wp-block-media-text__media img {
+    transform: translate3d(0px, 0px, 0px) !important;
+  }
+
+  @include large-and-up {
+    padding-top: $sp-7;
+    padding-bottom: $sp-7;
+  }
+}
+
 .wp-block-media-text.alignfull.is-pattern-p4-page-header {
   grid-template-columns: 100%;
   min-width: 360px;
